force-app/main/default/objects/PWChrono_Expense_Claim__c/PWChrono_Expense_Claim__c.object-meta.xml
<CustomObject>
    <description>Employee Expense Claims</description>
    <label>Expense Claim</label>
    <nameField>
        <displayFormat>EXP-{0000}</displayFormat>
        <label>Claim Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Expense Claims</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>