force-app/main/default/objects/PWChrono_Expense_Claim__c/fields/Approvers__c.field-meta.xml
<CustomField>
    <fullName>Approvers__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approver</label>
    <referenceTo>Portal_Users__c</referenceTo>
    <relationshipLabel>Expense Claims (Approver)</relationshipLabel>
    <relationshipName>Expense_Claims_Approver</relationshipName>
    <type>Lookup</type>
</CustomField>