force-app/main/default/objects/PWChrono_Expense_Claim__c/fields/Employee__c.field-meta.xml
<CustomField>
    <fullName>Employee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employee</label>
    <referenceTo>Portal_Users__c</referenceTo>
    <relationshipLabel>Expense Claims</relationshipLabel>
    <relationshipName>PWChrono_Expense_Claims</relationshipName>
    <type>Lookup</type>
</CustomField>