force-app/main/default/objects/PWChrono_Expense_Claim__c/fields/Employees__c.field-meta.xml
<CustomField>
    <fullName>Employees__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employees</label>
    <referenceTo>Portal_Users__c</referenceTo>
    <relationshipLabel>Expense Claim Employees</relationshipLabel>
    <relationshipName>Expense_Claim_Employees</relationshipName>
    <type>Lookup</type>
</CustomField>