force-app/main/default/objects/PWChrono_Expense_Claim__c/fields/Portal_Users__c.field-meta.xml
<CustomField>
    <fullName>Portal_Users__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Portal Users</label>
    <referenceTo>Portal_Users__c</referenceTo>
    <relationshipLabel>Expense Claim Portal Users</relationshipLabel>
    <relationshipName>Expense_Claim_Portal_Users</relationshipName>
    <type>Lookup</type>
</CustomField>