force-app/main/default/objects/PWChrono_Expense_Claim__c/fields/Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount__c</fullName>
    <label>Total Amount</label>
    <summarizedField>PWChrono_Expense_Item__c.Amount__c</summarizedField>
    <summaryFilterItems>
        <field>PWChrono_Expense_Item__c.Amount__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </summaryFilterItems>
    <summaryForeignKey>PWChrono_Expense_Item__c.Expense_Claim__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>